# rustdesk

libs/scrap/: Cargo.toml  aom_ffi.h  build.rs
libs/scrap/src/: lib.rs
libs/scrap/src/common/: aom.rs  codec.rs  mod.rs  vpx.rs
src/: client.rs
src/server/: video_service.rs
