[package]
authors = ["Ram <quadrupleslap@gmail.com>"]
build = "build.rs"
description = "Screen capture made easy."
documentation = "https://docs.rs/scrap"
edition = "2018"
keywords = ["screen", "capture", "record"]
license = "MIT"
name = "scrap"
repository = "https://github.com/quadrupleslap/scrap"
version = "0.5.0"

[features]
wayland = ["gstreamer", "gstreamer-app", "gstreamer-video", "dbus", "tracing"]

[dependencies]
block = "0.1"
cfg-if = "1.0"
libc = "0.2"
num_cpus = "1.13"

[dependencies.winapi]
default-features = true
features = ["dxgi", "dxgi1_2", "dxgi1_5", "d3d11", "winuser"]
version = "0.3"

[dev-dependencies]
docopt = "1.1"
quest = "0.3"
repng = "0.2"
serde = {version = "1.0", features = ["derive"]}
webm = "1.0"

[build-dependencies]
bindgen = "0.59"
target_build_utils = "0.3"
vcpkg = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = {version = "0.9", optional = true}
gstreamer = {version = "0.18", optional = true}
gstreamer-app = {version = "0.16", features = ["v1_10"], optional = true}
gstreamer-video = {version = "0.18", optional = true}
tracing = {version = "0.1", optional = true}
